<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/titel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="140dp"
        android:text="@string/a"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTrue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:text="@string/True"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvA" />

    <TextView
        android:id="@+id/tvTrue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:text="@string/True"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrue1" />

    <TextView
        android:id="@+id/tvFalse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:text="@string/False"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrue3" />

    <TextView
        android:id="@+id/tvFalse3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:text="@string/False"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFalse2" />

    <TextView
        android:id="@+id/tvB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/b"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/tvA"
        app:layout_constraintTop_toBottomOf="@+id/tvTitel" />

    <TextView
        android:id="@+id/tvTrue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/True"
        app:layout_constraintEnd_toStartOf="@+id/etAnswer1"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toEndOf="@+id/tvTrue1"
        app:layout_constraintTop_toBottomOf="@+id/tvB" />

    <TextView
        android:id="@+id/tvFalse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/False"
        app:layout_constraintEnd_toStartOf="@+id/etAnswer2"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/tvTrue3"
        app:layout_constraintTop_toBottomOf="@+id/tvTrue2" />

    <TextView
        android:id="@+id/tvTrue4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/True"
        app:layout_constraintEnd_toStartOf="@+id/etAnswer3"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toEndOf="@+id/tvFalse2"
        app:layout_constraintTop_toBottomOf="@+id/tvFalse1" />

    <TextView
        android:id="@+id/tvFalse4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/False"
        app:layout_constraintEnd_toStartOf="@+id/etAnswer4"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/tvFalse3"
        app:layout_constraintTop_toBottomOf="@+id/tvTrue4" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="80dp"
        android:text="@string/ab"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAnswer1"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/etAnswer2"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer1" />

    <EditText
        android:id="@+id/etAnswer3"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer2" />

    <EditText
        android:id="@+id/etAnswer4"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer3" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:text="@string/SubmitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>